# ts_store

./: .gitignore  .ninja_deps  .ninja_log  BUILD_ISSUES_AND_FIXES_FOR_OTHER_MACHINE.md  CMakeLists.txt  DUAL_COMPILER_BUILD.md  FORWARDING.md  FileCheckList.txt  LICENSE  README.md  TS_STORE_InMemory_Summary.md  TS_STORE_SQL_Roundtrip_Summary.md  TS_STORE_Test_Summary.md  build.ninja  cmake_install.cmake  persist.sql  persist_Floats.sql  persist_Ints.sql  test001.sql  test001_Floats.sql  test001_Ints.sql  test002.sql  test002_Floats.sql  test002_Ints.sql  test003.sql  test003_Floats.sql  test003_Ints.sql  ts_store.hpp  ts_store_performance_metrics.ods
Doc/: ARCHITECTURE.md  linux_mint_gcc15.md  ts_store_flag_docs.md
Documentation/: abbr_guide.hpp  ts_store_flag_docs.md
build_g++15/: CMakeCache.txt  Makefile  cmake_install.cmake
build_llvm20/: CMakeCache.txt  Makefile  cmake_install.cmake  ts_store_001_TS  ts_store_001_XS  ts_store_002_TS  ts_store_002_XS  ts_store_005_TS  ts_store_005_XS
examples/: Event_and_Summary_TS  Event_and_Summary_TS.cpp  Event_and_Summary_XS  Event_and_Summary_XS.cpp  binary_payload_benchmark.cpp  binary_persist_demo.cpp  binary_throughput_test.cpp  double_buffered_persistence_demo.cpp  in_memory_throughput.cpp  jtext_high_throughput_test.cpp  jtext_payload_benchmark.cpp  jtext_split_persistence_demo.cpp  jtext_throughput_test.cpp  slurp_jtext_to_sqlite.cpp  ts_store_with_double_buffer_demo.cpp
include/beman/ts_store/ts_store_headers/: ansi_colors.hpp  includes.hpp  ts_store.hpp  ts_store_config.hpp  ts_store_flags.hpp
include/beman/ts_store/ts_store_headers/impl_details/: core.hpp  diagnostic.hpp  duration.hpp  format_locale.hpp  (+8 more)
modules/jac.jtext/: jac.jtext.core.cppm  jac.jtext.cppm  jac.jtext.reader.cppm  jac.jtext.writer.cppm
modules/jac.qlite/: jac.qlite.cppm
modules/jac.report/: format.cpp  host_info.cpp  jac.report.cppm  manifest.cpp  summarize.cpp
modules/jac.test_framework/: jac.test_framework.cppm  runner.cpp
modules/jac.ts_store/: jac.ts_store.ansi.cppm  jac.ts_store.config.cppm  jac.ts_store.core.cppm  jac.ts_store.flags.cppm  jac.ts_store.impl.testing.cppm  jac.ts_store.persistence.binary.cppm  jac.ts_store.persistence.common.cppm  jac.ts_store.persistence.jtext.cppm  jac.ts_store.persistence.sql.cppm  jac.ts_store.persistence.writer.cppm  jac.ts_store.test_options.cppm
results/clang/: summary.md
results/gcc/: summary.md
scripts/: Build  Sync_dependencies.sh  build_common.sh  build_dual_compilers.sh  promote_summaries.sh  run_all_tests.sh  ts-test
test-composer/: build_modules.sh  build_one.sh  build_report.txt  build_results.txt  isolated_summary.txt  run_all_isolated.sh
test-summary/: README.md
test-summary/10k/: TS_STORE_InMemory_Summary.md  TS_STORE_SQL_Roundtrip_Summary.md  TS_STORE_Test_Summary.md
test-summary/OS_001/x7k/Smoke/: TS_STORE_InMemory_Summary.md  TS_STORE_SQL_Roundtrip_Summary.md  TS_STORE_Test_Summary.md
test-summary/OS_002/10k/Smoke/: TS_STORE_InMemory_Summary.md  TS_STORE_SQL_Roundtrip_Summary.md  TS_STORE_Test_Summary.md
test-summary/OS_003/10k/Smoke/: README.md  run_manifest.jtext
test-summary/OS_003/10k/xFull/: README.md  run_manifest.jtext
test-summary/OS_003/ssd/Smoke/: README.md  TS_STORE_InMemory_Summary.md  TS_STORE_SQL_Roundtrip_Summary.md  TS_STORE_Test_Summary.md  run_manifest.jtext
test-summary/OS_003/ssd/xFull/: README.md  run_manifest.jtext
test-summary/OS_003/x7k/Smoke/: README.md  run_manifest.jtext
test-summary/OS_003/x7k/xFull/: README.md  run_manifest.jtext
test-summary/ssd/: TS_STORE_InMemory_Summary.md  TS_STORE_SQL_Roundtrip_Summary.md  TS_STORE_Test_Summary.md
test-summary/x7k/: TS_STORE_InMemory_Summary.md  TS_STORE_SQL_Roundtrip_Summary.md  TS_STORE_Test_Summary.md
tests/: test_params.txt
tests/jtext_includes/: README.md  run_manifest_hostinfo_fields.jtFlds  run_manifest_runmeta_fields.jtFlds  run_manifest_scenarios_fields.jtFlds  ts_store_floats_fields.jtFlds  ts_store_floats_schema.jschma  ts_store_ints_fields.jtFlds  ts_store_ints_schema.jschma  ts_store_main_fields.jtFlds  ts_store_main_schema.jschma
tests/ts_store_001/: test_001_TS  test_001_TS.cpp  test_001_XS.cpp
tests/ts_store_002/: test_002_TS  test_002_TS.cpp  test_002_XS  test_002_XS.cpp
tests/ts_store_003/: test_003_TS  test_003_TS.cpp  test_003_XS  test_003_XS.cpp
tests/ts_store_004/: test_004_TS  test_004_TS.cpp  test_004_XS  test_004_XS.cpp
tests/ts_store_005/: test_005_TS.cpp  test_005_XS  test_005_XS.cpp
tests/ts_store_006/: test_006_TS.cpp  test_006_XS.cpp
tests/ts_store_007/: test_007_TS.cpp  test_007_XS.cpp
tests/ts_store_008/: test_008_TS.cpp  test_008_XS.cpp
tests/ts_store_flags/: Test_Flags  Test_Flags.cpp
tools/jtext_cli/: jtext_process.cpp
tools/test_cli/: main.cpp  manifest.cpp  run_manifest.hpp  summarize.cpp  types.hpp
ts_store_001/: test_001.cpp  test_001_TS  test_001_TS.cpp  test_001_XS  test_001_XS.cpp
ts_store_002/: test_002.cpp  test_002_TS  test_002_TS.cpp  test_002_XS  test_002_XS.cpp
ts_store_003/: test_003.cpp  test_003_TS  test_003_TS.cpp  test_003_XS  test_003_XS.cpp
ts_store_004/: test_004.cpp  test_004_TS  test_004_TS.cpp  test_004_XS  test_004_XS.cpp
ts_store_005/: test_005.cpp  test_005_TS  test_005_TS.cpp  test_005_XS  test_005_XS.cpp
ts_store_006/: test_006.cpp
ts_store_base/: ts_store_base  ts_store_base.cpp
ts_store_big_test/: ts_store_big_test.cpp
ts_store_concurrent/: ts_store_concurrent.cpp
ts_store_final_massive_test/: final_massive_test.cpp  final_massive_test_bare_metal
ts_store_flags/: Test_Flags  Test_Flags.cpp
ts_store_headers/: fixed_string.hpp  includes.hpp  ts_store.hpp  ts_store_config.hpp  ts_store_flags.hpp
ts_store_headers/impl_details/: abbr_guide.hpp  core.hpp  diagnostic.hpp  duration.hpp  fast_payload.hpp  memory_guard.h  memory_guard.hpp  press_to_cont.hpp  printing.hpp  sorting.hpp  test_constants.hpp  testing.hpp  unicode.hpp  verify_checks.hpp
ts_store_nuclear_test/: ts_store_nuclear_test.cpp
ts_store_sample/: ts_store_sample.cpp
ts_store_stress/: ts_store_stress.cpp
(+245 files in other folders)
